syntax = "proto3";

option go_package = "github.com/DuarteMRAlves/maestro/api/pb";

package pb;

import "google/protobuf/empty.proto";

service BlueprintManagement {
  rpc Create(Blueprint) returns (google.protobuf.Empty);
}

message Blueprint {
  string name = 2;
  repeated Stage stages = 3;
  repeated Link links = 4;
}

message Stage {
  string name = 2;
  string asset = 3;
  string service = 4;
  string method = 5;
}

message Link {
  string sourceStage = 1;
  string sourceField = 2;
  string targetStage = 3;
  string targetField = 4;
}